package com.techbank.account.common.events;

import java.math.BigDecimal;

import com.techbank.cqrs.core.events.BaseEvent;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.experimental.SuperBuilder;

@Data @NoArgsConstructor @AllArgsConstructor
@SuperBuilder
public class FundsDepositedEvent extends BaseEvent {
    private BigDecimal amount;

}
